- Removed SNTP task - Added TimeToLive and cache control to all json classes (1st step to full persistence)