@@ -147,7 +147,7 @@ public class TrackingManager
 	
 	private void setStartValue(String eventName)
 	{
-		Long now = new Long(DateUtils.getNowWithGMTTimeZone().getTimeInMillis());
+		Long now = Long.valueOf(DateUtils.getNowWithGMTTimeZone().getTimeInMillis());
 		
 		measureEventStartTimes.put(eventName, now);
 	}
@@ -156,7 +156,7 @@ public class TrackingManager
 	
 	private long calculateValueSincePrevious(String previousEventName)
 	{
-		Long now = new Long(DateUtils.getNowWithGMTTimeZone().getTimeInMillis());
+		Long now = Long.valueOf(DateUtils.getNowWithGMTTimeZone().getTimeInMillis());
 		
 		Long startTime = measureEventStartTimes.get(previousEventName);
 		
